plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.1'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.lobox.assignments'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'
bootRun {
    jvmArgs = ["-Xmx6g"]
}
repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.univocity:univocity-parsers:2.9.1'
    implementation group: 'org.rocksdb', name: 'rocksdbjni', version: '7.8.3'
    implementation 'net.sizovs:pipelinr:0.8'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
    useJUnitPlatform()
}
